# unifi-reconciler

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: release.yml
examples/rules/: managed-state.json  zones.yaml
examples/rules/policies/: example-block-iot-to-lan.yaml.example
src/unifi_reconciler/: __init__.py  cli.py  client.py  config.py  diff.py  export.py  loader.py  model.py  networks.py  normalized.py  reconcile.py  safety.py  writeback.py
tests/: conftest.py  test_client.py  test_diff.py  test_export.py  test_integration.py  test_loader.py  test_model.py  test_networks.py  test_reconcile.py  test_safety.py  test_writeback.py
